--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,5 @@
 EXPO_PUBLIC_CLERK_PUBLISHABLE_KEY=<your-public-clerk-publishable-key>
+NEON_DATABASE_URL=<your-neon-database-url>
+EXPO_PUBLIC_SERVER_URL=<https://uber-clone-app.com>
+EXPO_PUBLIC_GEOAPIFY_API_KEY=<your-geoapify-api-key>
+EXPO_PUBLIC_GOOGLE_API_KEY=<your-google-api-key>
