--- a/app.json
+++ b/app.json
@@ -26,7 +26,14 @@
       "output": "static",
       "favicon": "./assets/images/favicon.png"
     },
-    "plugins": ["expo-router"],
+    "plugins": [
+      [
+        "expo-router",
+        {
+          "origin": "https://uber-clone-app.com"
+        }
+      ]
+    ],
     "experiments": {
       "typedRoutes": true
     }
