--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@hookform/resolvers": "^3.9.0",
     "@neondatabase/serverless": "^0.9.4",
     "@react-navigation/native": "^6.0.2",
+    "@stripe/stripe-react-native": "0.37.2",
     "@tanstack/react-query": "^5.53.1",
     "axios": "^1.7.7",
     "expo": "~51.0.28",
@@ -50,6 +51,7 @@
     "react-native-screens": "3.31.1",
     "react-native-swiper": "^1.6.0",
     "react-native-web": "~0.19.12",
+    "stripe": "^16.9.0",
     "twrnc": "^4.5.1",
     "zod": "^3.23.8",
     "zustand": "^4.5.5"
