--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,10 @@
 EXPO_PUBLIC_CLERK_PUBLISHABLE_KEY=<your-public-clerk-publishable-key>
-NEON_DATABASE_URL=<your-neon-database-url>
 EXPO_PUBLIC_SERVER_URL=<https://uber-clone-app.com>
 EXPO_PUBLIC_GEOAPIFY_API_KEY=<your-geoapify-api-key>
 EXPO_PUBLIC_GOOGLE_API_KEY=<your-google-api-key>
+EXPO_PUBLIC_DIRECTIONS_API_KEY=<your-directions-api-key>
+EXPO_PUBLIC_STRIPE_PUBLISHABLE_KEY=<your-public-stripe-publishable-key>
+
+# SERVER : API ROUTES
+NEON_DATABASE_URL=<your-neon-database-url>
+STRIPE_SECRET_KEY=<your-stripe-secret-key>
